force-app/main/default/objects/pfc_Income__c/pfc_Income__c.object-meta.xml
<CustomObject>
    <description>Custom Object to Track Income for a person per Financial year.</description>
    <label>Income</label>
    <nameField>
        <displayFormat>IN-{00000000}</displayFormat>
        <label>Income Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>