force-app/main/default/objects/pfc_Income__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Fiscal year for Income</description>
    <label>Fiscal Year</label>
    <referenceTo>pfc_Fiscal_Year__c</referenceTo>
    <relationshipLabel>Income</relationshipLabel>
    <relationshipName>Income</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>