force-app/main/default/objects/pfc_Income__c/fields/Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Income_Source__c</fullName>
    <description>Source of the Income</description>
    <label>Income Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Investment Income</fullName>
            </value>
            <value>
                <fullName>Rental Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>