force-app/main/default/objects/pfc_Income__c/fields/Income_Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Tax_Type__c</fullName>
    <description>Type of income tax that applies on the incoming Income</description>
    <label>Income Tax Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Income Tax Rate</fullName>
            </value>
            <value>
                <fullName>Capital Gain Income Tax Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>