force-app/main/default/objects/pfc_Income__c/fields/Individual_Name__c.field-meta.xml
<CustomField>
    <fullName>Individual_Name__c</fullName>
    <description>Individual's name form the Parent</description>
    <formula>Individual__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Name</label>
    <type>Text</type>
</CustomField>