force-app/main/default/objects/pfc_Income__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Individual__c</columns>
    <columns>Income_Source__c</columns>
    <columns>Income_Tax_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>